--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.0.0",
     "@tanstack/react-query": "^4.29.19",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
@@ -24,6 +25,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@tanstack/react-query-devtools": "^4.29.19"
+    "@tanstack/react-query-devtools": "^4.29.19",
+    "prisma": "^5.0.0"
   }
 }
